--- a/.htaccess
+++ b/.htaccess
@@ -67,10 +67,25 @@ RewriteCond %{THE_REQUEST} \s/+productos\.php [NC]
 RewriteCond %{QUERY_STRING} (^|&)Art=3(&|$) [NC]
 RewriteRule ^productos\.php$ /productos/gastos-funerarios-policias? [R=301,L]
 
+RewriteCond %{THE_REQUEST} \s/+productos\.php [NC]
+RewriteCond %{QUERY_STRING} (^|&)Art=6(&|$) [NC]
+RewriteRule ^productos\.php$ /productos/gastos-funerarios-taxistas? [R=301,L]
+
+RewriteCond %{THE_REQUEST} \s/+productos\.php [NC]
+RewriteCond %{QUERY_STRING} (^|&)Art=7(&|$) [NC]
+RewriteRule ^productos\.php$ /productos/kasu-maternidad? [R=301,L]
+
+RewriteCond %{THE_REQUEST} \s/+productos\.php [NC]
+RewriteCond %{QUERY_STRING} (^|&)Art=8(&|$) [NC]
+RewriteRule ^productos\.php$ /productos/kasu-futuro-18? [R=301,L]
+
 # Resolver slugs hacia productos.php (backend)
 RewriteRule ^productos/gastos-funerarios/?$          /productos.php?Art=1 [QSA,L]
 RewriteRule ^productos/plan-privado-de-retiro/?$     /productos.php?Art=2 [QSA,L]
 RewriteRule ^productos/gastos-funerarios-policias/?$ /productos.php?Art=3 [QSA,L]
+RewriteRule ^productos/gastos-funerarios-taxistas/?$ /productos.php?Art=6 [QSA,L]
+RewriteRule ^productos/kasu-maternidad/?$            /productos.php?Art=7 [QSA,L]
+RewriteRule ^productos/kasu-futuro-18/?$             /productos.php?Art=8 [QSA,L]
 
 # === Páginas canónicas mapeadas (evita 404) ===
 RewriteRule ^testimonios/?$              /testimonios.php            [QSA,L]
